cm4all-beng-proxy (0.7.1) unstable; urgency=low

  * file-handler: close the stream on "304 Not Modified"
  * pool: use assembler code only on gcc
  * Makefile.am: enable the "subdir-objects" option

 --

cm4all-beng-proxy (0.7) unstable; urgency=low

  * ajp-client: check if connection was closed during response callback
  * header-forward: log session id
  * istream: separate TCP splicing checks
  * istream-pipe: fix segmentation fault after incomplete direct transfer
  * istream-pipe: implement the "available" method
  * istream-pipe: allocate pipe only if handler supports it
  * istream-pipe: flush the pipe before reading from input
  * istream-pipe: reuse pipes in a stock
  * direct: support splice() from TCP socket to pipe
  * istream: direct() returns -3 if stream has been closed
  * hstock: don't destroy stocks while items are being created
  * tcp-stock: limit number of connections per host to 256
  * translate, http-client, ajp-client, cgi, http-cache: verify the HTTP
    response status
  * prototypes/translate.py: disallow "/../" and null bytes
  * prototypes/translate.py: added "/jail-delegate/" location
  * uri-parser: strict RFC 2396 URI verification
  * uri-parser: don't unescape the URI path
  * http-client, ajp-client: verify the request URI
  * uri-escape: unescape each character only once
  * http-cache: never use the memcached stock if caching is disabled
  * allow 8192 connections by default
  * allow 65536 file handles by default
  * added package cm4all-jailed-beng-proxy-delegate-helper

 -- Max Kellermann <mk@cm4all.com>  Wed, 21 Oct 2009 15:00:56 +0200

cm4all-beng-proxy (0.6.23) unstable; urgency=low

  * header-forward: log session information
  * prototypes/translate.py: added /cgi-bin/ location
  * http-server: disable keep-alive for HTTP/1.0 clients
  * http-server: don't send "Connection: Keep-Alive"
  * delegate-stock: clear the environment
  * delegate-stock: added jail support