@@ -114,6 +114,7 @@ handle_set2(struct config *config, const char *argv0,
             const char *name, size_t name_length, const char *value)
 {
     static const char max_connections[] = "max_connections";
+    static const char tcp_stock_limit[] = "tcp_stock_limit";
     static const char http_cache_size[] = "http_cache_size";
     static const char filter_cache_size[] = "filter_cache_size";
     static const char translate_cache_size[] = "translate_cache_size";
@@ -127,6 +128,14 @@ handle_set2(struct config *config, const char *argv0,
             arg_error(argv0, "Invalid value for max_connections");
 
         config->max_connections = l;
+    } else if (name_length == sizeof(tcp_stock_limit) - 1 &&
+               memcmp(name, tcp_stock_limit,
+                      sizeof(tcp_stock_limit) - 1) == 0) {
+        l = strtol(value, &endptr, 10);
+        if (*endptr != 0 || l < 0)
+            arg_error(argv0, "Invalid value for tcp_stock_limit");
+
+        config->tcp_stock_limit = l;
     } else if (name_length == sizeof(http_cache_size) - 1 &&
                memcmp(name, http_cache_size,
                       sizeof(http_cache_size) - 1) == 0) {
