@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.7.1) unstable; urgency=low
 
   * file-handler: close the stream on "304 Not Modified"
   * pool: use assembler code only on gcc
+  * cmdline: added option "--set tcp_stock_limit"
   * Makefile.am: enable the "subdir-objects" option
 
  --
